--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 120rem;
+  height: 55rem;
+  margin: 5rem auto;
+  border-radius: 3rem;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: var(--white);
 }
 
-.App-link {
-  color: #61dafb;
+.leftContainer {
+  width: 30%;
+  height: 100%;
+  background-color: lightcoral;
+
+  &__search {
+    margin: 2rem;
+
+    &--inputBox {
+      width: 100%;
+      height: 30px;
+      padding: 0.2rem 0.6rem;
+      border-radius: 0.5rem;
+      border-style: none;
+      outline-style: none;
+    }
+
+    &--btn {
+      display: none;
+    }
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rightContainer {
+  width: 70%;
+  height: 100%;
+  background-color: lightseagreen;
 }
