--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap");
+
+:root {
+  --white: #fff;
+  --black: #000;
+
+  --primary-light: #fef3c7;
+  --primary-medium: #fcd34d;
+  --primary-dark: #f59e0b;
+
+  --gray-light: #e5e7eb;
+  --gray-medium: #4b5563;
+  --gray-dark: #1f2937;
+
+  --shadow-dark: 0.4rem 0.4rem 1rem rgba(0, 0, 0, 0.3),
+    -0.4rem -0.4rem 1rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0.4rem 0.4rem 1rem rgba(0, 0, 0, 0.3);
+
+  --border: 1px solid var(--gray-medium);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: monospace;
+  font-weight: 400;
+  line-height: 1.6;
+  color: var(--gray-dark);
+  background-color: var(--primary-light);
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
