--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
 }
 
 .leftContainer {
-  width: 30%;
+  width: 25%;
   height: 100%;
   background-color: lightcoral;
 
@@ -24,15 +24,43 @@
       border-style: none;
       outline-style: none;
     }
-
-    &--btn {
-      display: none;
-    }
   }
 }
 
 .rightContainer {
-  width: 70%;
+  width: 75%;
   height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: scroll;
   background-color: lightseagreen;
+
+  &__card {
+    width: 25rem;
+    height: 33rem;
+    margin: 2rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    background-color: var(--white);
+
+    &--image {
+      width: 100%;
+      height: 25rem;
+      object-fit: cover;
+    }
+
+    &--content {
+      font-size: 1.4rem;
+      padding: 1rem;
+
+      &-h2 {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+    }
+  }
 }
