--- a/src/index.scss
+++ b/src/index.scss
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-  font-family: monospace;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   line-height: 1.6;
   color: var(--gray-dark);
