--- a/src/App.scss
+++ b/src/App.scss
@@ -64,3 +64,15 @@
     }
   }
 }
+
+.test {
+  font-size: 1.4rem;
+  margin: 2rem;
+  text-decoration: none;
+  color: var(--white);
+}
+
+.about {
+  font-size: 1.4rem;
+  margin: 2rem;
+}
