--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,17 @@
   overflow: hidden;
   display: flex;
   background-color: var(--white);
+  box-shadow: var(--shadow-dark);
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    border-radius: 0;
+    flex-direction: column;
+  }
 }
 
 .leftContainer {
@@ -24,6 +35,15 @@
       border-style: none;
       outline-style: none;
     }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .leftContainer {
+    width: 100%;
+    height: 18vh;
+    margin: 0;
+    border-radius: 0;
   }
 }
 
@@ -68,6 +88,15 @@
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .rightContainer {
+    width: 100%;
+    height: 82vh;
+    margin: 0;
+    justify-content: center;
+  }
+}
+
 .test {
   font-size: 1.4rem;
   margin-left: 2rem;
@@ -86,6 +115,18 @@
 
   & > p {
     margin-bottom: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .about {
+    width: 100%;
+    height: 82vh;
+    margin: 2rem;
+
+    & > p {
+      margin-right: 3rem;
+    }
   }
 }
 
@@ -144,6 +185,25 @@
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .details {
+    width: 100%;
+    height: 82vh;
+    margin: 0;
+    padding: 2rem;
+    overflow: scroll;
+    justify-content: center;
+
+    &__contents {
+      flex-direction: column;
+
+      &-image {
+        margin-bottom: 2rem;
+      }
+    }
+  }
+}
+
 .error {
   font-size: 1.4rem;
   margin: 2rem;
@@ -162,5 +222,14 @@
   &__infinity {
     width: 10rem;
     height: auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .loader {
+    &__infinity {
+      width: 10rem;
+      height: 82vh;
+    }
   }
 }
