--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: var(--gray-dark);
-  background-color: var(--primary-light);
+  background-color: var(--gray-light);
   min-height: 100vh;
   overflow: hidden;
 }
